ingress-manifests/ingress-atlantis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: atlantis.mylukomore.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: atlantis
              port:
                number: 80
